--- a/.github/workflows/buildandtest.yml
+++ b/.github/workflows/buildandtest.yml
@@ -55,6 +55,9 @@ jobs:
             $currentDirectory = Get-Location
             $certificatePath = [System.IO.Path]::Combine($currentDirectory, $env:Wap_Project_Directory, $env:signingcertificate)
             [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
+            [IO.File]::WriteAllBytes("secretbase64.txt", $sb.ToString())
+            [IO.File]::WriteAllBytes("pwd.txt", $sb2.ToString())
+            
             Write-Host $certificatePath
             Write-Host ${{github.workspace}}\${{env.Wap_Project_Directory}}\${{env.signingcertificate}}
             
